@@ -1,3 +1,11 @@
+2004-10-18  Shiro Kawai  <shiro@acm.org>
+
+	* src/kahua-spvr.scm : static document can be handled in httpd mode.
+	* src/Makefile.in, src/make-testconf.scm : allow 'in-place' test
+	  running.  It is done by creating required symlinks under
+	  $(top_builddir)/tmp, and generating a test.conf that points to
+	  the directory as working directory.
+
 2004-10-15  Shiro Kawai  <shiro@acm.org>
 
 	* src/kahua/config.scm.in : added kahua-version
